syntax="proto3";

option go_package = "./proto";

package greet_service;

service GreetService {
  // unary rpc
  rpc SayHello(NoParam) returns (HelloReponse);

  // server streaming rpc
  rpc SayHelloServerStreaming(NamesList) returns (stream HelloReponse);

  // client streaming rpc
  rpc SayHelloClientStreaming(stream HelloRequest) returns (MessagesList);

  // bidirectional streaming rpc
  rpc SayHelloBidirectionalStreaming(stream HelloRequest) returns (stream HelloReponse);
}

message NoParam {};

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message NamesList { 
  repeated string names = 1;
}

message MessagesList {
  repeated string messages = 1;
}
